<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/main_view" >

    <TextView
        android:id="@+id/flashcard_question"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="33dp"
        android:background="@drawable/card_background"
        android:elevation="10dp"
        android:gravity="center"
        android:text="@string/question"
        android:textColor="@android:color/white"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/correct_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="52dp"
        android:background="@color/orange"
        android:gravity="center"
        android:text="@string/correct_answer"
        android:textColor="@android:color/black"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/wrong_answer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="190dp"
        android:background="@color/orange"
        android:gravity="center"
        android:text="@string/wrong_answer1"
        android:textColor="@android:color/black"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/wrong_answer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="122dp"
        android:background="@color/orange"
        android:gravity="center"
        android:text="@string/wrong_answer2"
        android:textColor="@android:color/black"
        android:textSize="40sp" />

    <ImageView
        android:id="@+id/toogle_choices_visibility"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/show_icon" />

</RelativeLayout>