<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateCardActivity">

    <EditText
        android:id="@+id/new_question"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="33dp"
        android:background="@drawable/answer_background"
        android:hint="@string/hint_new_question"
        android:inputType="textMultiLine"
        android:paddingLeft="20dp"
        android:textAlignment="viewStart" />

    <EditText
        android:id="@+id/new_correct_answer"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="131dp"
        android:background="@drawable/answer_background"
        android:hint="@string/hint_correct_answer"
        android:inputType="textMultiLine"
        android:paddingLeft="20dp"
        android:textAlignment="textStart" />

    <EditText
        android:id="@+id/new_wrong_answer1"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="192dp"
        android:background="@drawable/answer_background"
        android:hint="@string/hint_wrong_answer1"
        android:inputType="textMultiLine"
        android:paddingLeft="20dp" />

    <EditText
        android:id="@+id/new_wrong_answer2"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="95dp"
        android:background="@drawable/answer_background"
        android:hint="@string/hint_wrong_answer2"
        android:inputType="textMultiLine"
        android:paddingLeft="20dp" />

    <ImageView
        android:id="@+id/cancel_activity"
        android:layout_width="62dp"
        android:layout_height="69dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="28dp"
        android:src="@drawable/cancel_icon_foreground" />

    <ImageView
        android:id="@+id/save_card"
        android:layout_width="95dp"
        android:layout_height="66dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="18dp"
        android:src="@drawable/save_icon_foreground" />

</RelativeLayout>